--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 /* rem stands for root element */
 body{
     margin: 0;
+    padding: 0;
     display: flex; 
     justify-content: center; 
     align-items: center;
@@ -16,14 +17,15 @@ body{
     padding: 20px;
     margin-right: 10px;
     overflow: hidden;
-    max-width: 500px;
+    max-width: 530px;
+    width: 100%;
 
 }
 
 /* This is for the display */
 #display {
     width: 100%;
-    height: 100px;
+    height: 60%; /* height of the display */
     background-color: #212121;
     font-size: 4rem;
     border: none;
@@ -52,6 +54,42 @@ button{
     font-size: 2.5rem;
     font-weight: bold;
     cursor: pointer;
+}
+
+button.equal-btn, button.operator-btn, button.clear-btn, button.negative-btn, button.percent-btn, button.decimal-btn {
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    border: none;
+    background-color: #424242;
+    color: #eceff1;
+    font-size: 2.5rem;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+/* styles btn-zero */
+button.zero {
+    grid-column: span 2;
+    border-radius: 50px;
+    border: none;
+    background-color: #424242;
+    color: #eceff1;
+    width: 220px;
+    font-size: 2.5rem;
+    cursor: pointer;
+    text-align: left;
+    padding: 0 40px;
+}
+
+/* styles for numbers */
+button.number {
+    background-color: #616161;
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    border: none;
+    font-size: 2.5rem;
 }
 
 /* Style for hover effect of numbers and operator button */
